--- a/public/css/poulet_style.css
+++ b/public/css/poulet_style.css
@@ -1,33 +1,34 @@
 
-li .recetas{
+li .recetas {
     font-family: "Lucida Calligraphy";
     font-size: 2rem;
     font-style: italic;
 }
 
-.altura_aside{
+.altura_aside {
     height: 600px;
 }
 
-.tarjeta{
+.tarjeta {
     height: 400px;
     width: 350px;
 }
 
-.color-poulet{
+.color-poulet {
     background-color: #FEDDEA; /*color institucional */
 }
-.cursiva-poulet{
+
+.cursiva-poulet {
     font-family: "Lucida Calligraphy";
     font-style: italic;
 }
 
-.card-poulet{
+.card-poulet {
     background-color: snow;
     width: 350px;
 }
 
-.poulet-header-Carnes{
+.poulet-header-Carnes {
     background-color: #FEDDEA; /*color institucional */
     color: aliceblue;
     background-image: url(../img/carnes-header.jpg);
@@ -36,7 +37,7 @@ li .recetas{
     background-size: cover;
 }
 
-.poulet-header-Pastas{
+.poulet-header-Pastas {
     background-color: #FEDDEA; /*color institucional */
     color: aliceblue;
     background-image: url(../img/pastas-header.jpg);
@@ -45,7 +46,7 @@ li .recetas{
     background-size: cover;
 }
 
-.poulet-header-Pescados{
+.poulet-header-Pescados {
     background-color: #FEDDEA; /*color institucional */
     color: aliceblue;
     background-image: url(../img/pescados-header.jpg);
@@ -54,7 +55,7 @@ li .recetas{
     background-size: cover;
 }
 
-.poulet-header-Pollos{
+.poulet-header-Pollos {
     background-color: #FEDDEA; /*color institucional */
     color: aliceblue;
     background-image: url(../img/pollos-header.jpg);
@@ -63,12 +64,12 @@ li .recetas{
     background-size: cover;
 }
 
-.poulet-holder{
+.poulet-holder {
     height: 6rem;
     overflow: hidden;
 }
 
-.poulet-header-Postres{
+.poulet-header-Postres {
     background-color: #FEDDEA; /*color institucional */
     color: aliceblue;
     background-image: url(../img/postres-header.jpg);
@@ -77,7 +78,7 @@ li .recetas{
     background-size: cover;
 }
 
-.poulet-header{
+.poulet-header {
     background-color: #FEDDEA; /*color institucional */
     color: white;
     background-image: url(../img/header.jpg);
@@ -86,20 +87,52 @@ li .recetas{
     background-size: cover;
 }
 
-.poulet-nombre-receta{
+.poulet-nombre-receta {
     font-size: 1.25rem;
 }
 
-.poulet-cross-icon{
+.poulet-cross-icon {
     font-size: 3rem;
     color: red;
 }
 
-.poulet-iconos-cocinar{
+.poulet-iconos-cocinar {
     font-size: 30px;
     color: dimgrey;
 }
 
-.poulet-progressBar{
-    width:100%;
+.poulet-progressBar {
+    width: 100%;
 }
+
+.poulet-link {
+    font-family: sans-serif;
+}
+
+.form-control:focus {
+    border-color: violet;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+    /* box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);*/
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+    background-color: #F06292;
+    border-color: violet;
+}
+
+.custom-checkbox .custom-control-input:focus ~ .custom-control-label::before {
+    border-color: violet;
+    box-shadow: inset 0 1px 1px rgba(2, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+
+.btn-link {
+    font-size: 0.65rem;
+    color: yellow;
+}
+
+
+
+
+
+
+
