--- a/public/css/poulet_style.css
+++ b/public/css/poulet_style.css
@@ -125,10 +125,29 @@ li .recetas {
     box-shadow: inset 0 1px 1px rgba(2, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
 
-.btn-link {
-    font-size: 0.65rem;
-    color: yellow;
+.custom-file-input:focus ~ .custom-file-label {
+    border-color: violet;
+    box-shadow: inset 0 1px 1px rgba(2, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
+
+.dropdown-item:hover{
+    background-color: pink;
+    color: white;
+}
+.poulet-font-125{
+    font-size: 125%
+}
+
+.nav-link:hover{
+    background-color: pink;
+    color: white;
+}
+
+.nav-link{
+    color: #f48fb1;
+}
+
+
 
 
 
