renovacion panel control se reconstruyo el panel de control haciendilo mas estetico y funcional ahora muestra mas infirmacion. se creo la migracion consultas para almacenar todos los formularios de contacto se ordenaron los scripts de java en un archivo js se creo un middleware para gestionar el acceso al panel correcciones varias

--- a/public/css/poulet_style.css
+++ b/public/css/poulet_style.css
@@ -147,11 +147,62 @@ li .recetas {
     color: #f48fb1;
 }
 
+.poulet-card-info{
+    width: 300px;
 
+}
 
+.poulet-card-info-body{
+    height: 390px;
+    overflow-y: auto ;
+}
 
+.card-footer{
+    background-color: white;
+}
 
+/******/
+.poulet-scroll::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.3);
+    margin-top: 8px;
+    margin-bottom: 8px;
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
 
+.poulet-scroll::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
 
+.poulet-scroll::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: lightpink;
+}
 
+/******/
+body::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.3);
+    margin-top: 8px;
+    margin-bottom: 8px;
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
 
+body::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: lightpink;
+}
