--- a/public/css/poulet_style.css
+++ b/public/css/poulet_style.css
@@ -130,6 +130,12 @@ li .recetas {
     box-shadow: inset 0 1px 1px rgba(2, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
 
+.btn:focus{
+    border-color: violet;
+    box-shadow: inset 1px 1px 1px rgba(2, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+
+
 .dropdown-item:hover{
     background-color: pink;
     color: white;
@@ -206,3 +212,43 @@ body::-webkit-scrollbar-thumb
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: lightpink;
 }
+
+.poulet-card-list{
+    width: 500px;
+    height: 380px;
+    overflow-y: auto;
+}
+
+/**** */
+.poulet-fab{
+    width:60px;
+    height:60px;
+    background-color:#f48fb1;
+    margin: 5px;
+    padding:10px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    font-size:11px;
+    line-height:32px;
+    text-transform: uppercase;
+    float:inside;
+}
+.poulet-fab:hover{
+    opacity: 0.50;
+    -moz-opacity: .50;
+}
+.poulet-fab a{
+    color:#fff;
+    text-decoration:none;
+    padding:5px 5px 5px 0;
+}
+
+
+/*  background-color: pink;*/
+table.table-hover tbody tr:hover {
+    color: white;
+    background-color: lightpink;
+}
+
+
